@@ -205,6 +205,10 @@ static struct trobj Poison[] = {
 	{ POT_SICKNESS, 0, POTION_CLASS, 2, 0 },
 	{ 0, 0, 0, 0, 0 }
 };
+static struct trobj Pickaxe[] = {
+	{ PICK_AXE, 0, TOOL_CLASS, 1, 0 },
+	{ 0, 0, 0, 0, 0 }
+};
 #ifdef TOURIST
 static struct trobj Leash[] = {
 	{ LEASH, 0, TOOL_CLASS, 1, 0 },
@@ -813,6 +817,11 @@ u_init()
 	    knows_object(DWARVISH_MITHRIL_COAT);
 	    knows_object(DWARVISH_CLOAK);
 	    knows_object(DWARVISH_ROUNDSHIELD);
+		 if (!rn2(4) && !Role_if(PM_ARCHEOLOGIST))
+		 {
+			 /* Wise dwarves bring their toy to the dungeons. */
+			 ini_inv(Pickaxe);
+		 }
 	    break;
 
 	case PM_GNOME:
